PR c++/78572 - ICE with self-modifying array initializer

* constexpr.c (cxx_eval_store_expression): The object we're
	initializing is outside the constant-expression.

From-SVN: r245511